--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.2.9",
     "formik-yup": "^0.0.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
