--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "formik-yup": "^0.0.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-progress": "^5.0.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.4.1",
