--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-svg": "^13.6.0",
     "yup": "^0.28.5"
   },
   "devDependencies": {
