--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
+    "expo-image-picker": "^14.0.2",
+    "expo-print": "^12.0.0",
+    "expo-sharing": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "formik-yup": "^0.0.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-image-picker": "^5.0.0",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^5.0.0",
     "react-native-responsive-fontsize": "^0.5.1",
