--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.9",
+    "expo-document-picker": "^11.0.1",
     "expo-image-picker": "^14.0.2",
     "expo-print": "^12.0.0",
     "expo-sharing": "^11.0.1",
@@ -22,6 +23,7 @@
     "formik-yup": "^0.0.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-document-picker": "^8.1.3",
     "react-native-image-picker": "^5.0.0",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^5.0.0",
