--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.2.9",
     "formik-yup": "^0.0.5",
     "react": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.70.5",
     "react-native-document-picker": "^8.1.3",
     "react-native-image-picker": "^5.0.0",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.6.0",
+    "react-native-web": "~0.18.7",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
