--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "formik-yup": "^0.0.5",
+    "pdf-lib": "^1.17.1",
     "react": "18.1.0",
     "react-dom": "^18.2.0",
     "react-native": "0.70.5",
