--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
+    "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.9",
     "expo-document-picker": "^11.0.1",
     "expo-image-picker": "^14.0.2",
@@ -21,11 +22,16 @@
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "formik-yup": "^0.0.5",
+    "i": "^0.3.7",
+    "npm": "^9.3.0",
+    "pdf-lib": "^1.17.1",
     "react": "18.1.0",
     "react-dom": "^18.2.0",
     "react-native": "0.70.5",
     "react-native-document-picker": "^8.1.3",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.0.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-progress": "^5.0.0",
     "react-native-responsive-fontsize": "^0.5.1",
