--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.70.5",
     "react-native-document-picker": "^8.1.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
