--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "expo": "~47.0.9",
     "expo-document-picker": "^11.0.1",
+    "expo-image-manipulator": "~11.0.0",
     "expo-image-picker": "^14.0.2",
     "expo-print": "^12.0.0",
     "expo-sharing": "^11.0.1",
