--- a/package.json
+++ b/package.json
@@ -14,23 +14,22 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.3",
     "expo": "~47.0.9",
     "expo-document-picker": "^11.0.1",
     "expo-image-manipulator": "~11.0.0",
     "expo-image-picker": "^14.0.2",
+    "expo-linking": "^3.3.0",
     "expo-print": "^12.0.0",
     "expo-sharing": "^11.0.1",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.2.9",
     "formik-yup": "^0.0.5",
     "i": "^0.3.7",
-    "npm": "^9.3.0",
-    "pdf-lib": "^1.17.1",
     "react": "18.1.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.1.0",
     "react-native": "0.70.5",
     "react-native-document-picker": "^8.1.3",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-image-picker": "^5.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -42,6 +41,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-svg": "^13.6.0",
     "react-native-web": "~0.18.7",
+    "react-native-webview": "11.23.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
